--- a/zadania/zad5/AlleDrogo/src/app/auction/auction.component.html
+++ b/zadania/zad5/AlleDrogo/src/app/auction/auction.component.html
@@ -1,5 +1,5 @@
 
-<div *ngIf="!showEdit" style="cursor: pointer; cursor: hand; margin-top: 5px" (click)="showDetails = !showDetails; auctionSelected()">{{name}}</div>
+<div *ngIf="!showEdit" style="cursor: pointer; cursor: hand; margin-top: 5px" (click)="showDetails = !showDetails">{{name}}</div>
 <div style="font-weight: bold; margin: 5px" *ngIf="showDetails">
     {{name}} {{price}} $
     <span style="cursor: pointer; cursor: hand;" class="glyphicon glyphicon-pencil" (click)="showDetails = !showDetails; showEdit = !showEdit"></span>
@@ -7,14 +7,14 @@
 </div>
 
 <div *ngIf="showEdit">
-    <form class="form-inline" [formGroup]="editForm" (ngSubmit)="updateAuction(editForm.value)">
+    <form class="form-inline" [formGroup]="editForm">
     <div class="form-group">
-        <input type="text" [formControl]="editName">
+        <input type="text"  [formControl]="editForm.controls['name']" value="{{name}}">
     </div>
     <div class="form-group">
-        <input type="text" [formControl]="editPrice">
+        <input type="text" [formControl]="editForm.controls['price']" value="{{price}}">
     </div>
-    <button type="submit">Save</button>
+    <button (click)="showEdit = !showEdit; updateAuction(editForm.value)">Save</button>
     <button (click)="showEdit = !showEdit">Cancel</button>
     </form>
 </div>
